Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18651

Crash when adding QML file to Qt Quick Application project

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 4.4.0
    • Qt Creator 4.3.0, Qt Creator 4.4.0-rc1
    • None
    • {noformat}
      Qt Creator 4.3.0
      Based on Qt 5.8.0 (GCC 5.3.1 20160406 (Red Hat 5.3.1-6), 64 bit)
      Built on May 23 2017 11:09:03
      From revision 7482d8a152
      {noformat}

      Steps to reproduce:

      1. Open an existing session with an existing Qt Quick Application project with two kits configured (I had self-built Qt 5 dev and Qt 5.9 kits)
      2. Switch from one kit to the other
      3. Right click on the "/" project tree node under qml.qrc, and select "Add New..."
      4. Add a new QML file, naming it MySpinBox. When you click next, it should crash. If it doesn't, delete the file you just added permanently, and start from step 2 again

      Backtrace from gdb:

      #0  0x00007ffff5bbbdb7 in QMetaObject::cast(QObject const*) const () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5
      #1  0x00007fffcd0ddc29 in ?? () from /home/mitch/dev/qt-unified/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so
      #2  0x00007ffff70edc76 in ?? () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #3  0x00007ffff70ede97 in QWizard::next() () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #4  0x00007ffff5bdc3e1 in QMetaObject::activate(QObject*, int, int, void**) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5
      #5  0x00007ffff6fbb822 in QAbstractButton::clicked(bool) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #6  0x00007ffff6fbba14 in ?? () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #7  0x00007ffff6fbc635 in QAbstractButton::click() () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #8  0x00007ffff70b2860 in QDialog::keyPressEvent(QKeyEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #9  0x00007ffff6f1f6c7 in QWidget::event(QEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #10 0x00007ffff6edadcc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #11 0x00007ffff6ee3c32 in QApplication::notify(QObject*, QEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #12 0x00007ffff5bb3458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5
      #13 0x00007ffff6f3b343 in ?? () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #14 0x00007ffff6edadcc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #15 0x00007ffff6ee2236 in QApplication::notify(QObject*, QEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5
      #16 0x00007ffff5bb3458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5
      #17 0x00007ffff6715730 in QGuiApplicationPrivate::processKeyEvent(QWindowSystemInterfacePrivate::KeyEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5
      #18 0x00007ffff671a935 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5
      #19 0x00007ffff66f7a1b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5
      #20 0x00007fffee35f4b0 in ?? () from /home/mitch/dev/qt-unified/Tools/QtCreator/lib/Qt/plugins/platforms/../../lib/libQt5XcbQpa.so.5
      #21 0x00007ffff1526197 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #22 0x00007ffff15263f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #23 0x00007ffff152649c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #24 0x00007ffff5c03cbf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5
      #25 0x00007ffff5bb19ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5
      #26 0x00007ffff5bb99f4 in QCoreApplication::exec() () from /home/mitch/dev/qt-unified/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5
      #27 0x0000000000409aa7 in ?? ()
      #28 0x00007ffff4864830 in __libc_start_main (main=0x406ef0, argc=1, argv=0x7fffffffdc98, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffffffdc88) at ../csu/libc-start.c:291
      #29 0x000000000040a401 in ?? ()
      

        1. qtcreatorbug18651.mkv
          1.80 MB
          Mitch Curtis
        For Gerrit Dashboard: QTCREATORBUG-18651
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes